# WumpusWorld

./: README.md  demo.py  pyproject.toml
src/wumpus/: __init__.py  agent.py  cell.py  cli_view.py  game_controller.py  knowledge_base.py  main.py  sensor.py  worldmanager.py
tests/: test_agent.py  test_cell.py  test_knowledge_base.py
