[project]
name = "wumpus"
version = "0.1.0"
description = ""
authors = [
    {name = "Santhosh Kumar Karthikeyan",email = "santhoshkumarkarthikeyan5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade (>=3.3.2,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "wumpus", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
