[project]
name = "wumpus"
version = "0.1.0"
description = "Wumpus World game with AI agent inference"
authors = [
    {name = "Santhosh Kumar Karthikeyan",email = "santhoshkumarkarthikeyan5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=7.0.0)",
    "pytest-cov (>=4.0.0)",
]

[project.scripts]
wumpus = "wumpus.main:main"

[tool.poetry]
packages = [{include = "wumpus", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
